# demo-surin

./: .gitignore  QA_scenario.md  README.md  pyproject.toml  run_streamlit.py  streamlit_app.py
Langgraph-workflow/: agent_tools.py  utils.py  workflow.py
Langgraph_workflow/: README_streamlit.md  agent_tools.py  requirements_streamlit.txt  utils.py  workflow.py
RAG-Pipeline/: check_dataset.ipynb  check_dataset_in_qdrant.py  create_table.sql  load_dataset_to_postgre.py  load_dataset_to_qdrant.py  make_embedding_data_and_load_to_table.py
